--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
+    <script src="https://kit.fontawesome.com/a2d2024d0e.js" crossorigin="anonymous"></script>   
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 <body class="dark">
@@ -16,22 +17,26 @@
         <h1>Where in the world?</h1>
         <h3 class="theme"><i class="fas fa-moon"></i> Dark mode</h3>
     </div>
-    <div class="search">
-        <div class="searchsection">
-            <button><i class="fas fa-search"></i></button>
-            <input type="text" class="input" placeholder="Searh for a country...">
+    <div class="container">
+        <div class="search">
+            <div class="searchsection">
+                <button><i class="fas fa-search"></i></button>
+                <input type="text" class="input" placeholder="Searh for a country...">
+            </div>
+            <select name="" id="region" >
+                <option value="All" class="all">All</option>
+                <option value="Africa" class="africa">Africa</option>
+                <option value="Americas">Americas</option>
+                <option value="Asia">Asia</option>
+                <option value="Europe">Europe</option>
+                <option value="Oceania">Oceania</option>
+            </select>
         </div>
-        <select name="" id="" >
-            <option value="All">All</option>
-            <option value="Africa">Africa</option>
-            <option value="America">America</option>
-            <option value="Asia">Asia</option>
-            <option value="Europe">Europe</option>
-            <option value="Oceania">Oceania</option>
-        </select>
-        
+        <div class="main" id="main"></div>
     </div>
-    <div class="main" id="main"></div>
+    <div class="details">
+
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
